# tesseract_simple_example_rgb

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.a7fc5f6  CameraView.cpp  CameraView.h  CameraViewThread.cpp  CameraViewThread.h  DecodeH264AndStream.cpp  DecodeH264AndStream.h  Dockerfile  ImageStream.cpp  ImageStream.cpp.cpp  ImageStream.h  ImageStreamRGB.cpp  ImageStreamRGB.h  Makefile  SimpleBuffer.h  YuvUtils.cpp  YuvUtils.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.sh  cmake_clean.sh  cmake_install.cmake  main.cpp  main.qml  main2.cpp  main3.cpp  roosek2.sln  roosek2.vcxproj  roosek2.vcxproj.filters  roseek  roseek_automoc.cpp  run.sh  stdafx.cpp  targetver.h  tesseract_example  (+2 more)
include/: CTFactoryTest.h  CTMedia.h  CTOSD.h  CTStream.h  RSJpegUtil.h  Roseek_CircularQueue.h  WPMainCore.h  WPNetCmd.h
libs/linux/: WPDemo.ini  ctdemo_qt_en.qm  ctdemo_qt_zh.qm  libsndio.so.6.1  wp_sdemo  wp_sdemo_fa  wp_sdemo_h264  wp_sdemo_jpg
libs/linux/images/: Thumbs.db
libs/win/lib/win32/: CTStream.lib  RSJpegUtil.lib  RSMediaRender.lib  RSYuvUtil.lib
libs/win/lib/x64/: CTMainCore.lib  CTOSD.lib  CTStream.lib  RSJpegUtil.lib  WPMainCore.lib
roosek2.dir/Debug/roosek2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  roosek2.lastbuildstate
roosek2_autogen/: moc_predefs.h  mocs_compilation.cpp
roosek2_autogen/EWIEGA46WW/: moc_CameraView.cpp
roosek2_autogen/include_Debug/EWIEGA46WW/: moc_CameraView.cpp
roosek2_autogen/include_Release/EWIEGA46WW/: qrc_qml_CMAKE_.cpp
roseek_automoc.dir/: moc_CameraView_KZDBTKL4KOUWQY.cpp  qrc_qml_MDHIZXVMUCSDDN.cpp
win_bin/lib/win32/: CTMedia.lib  CTOSD.lib  WPMainCore.lib
win_bin/lib/x64/: CTMedia.lib  RSMediaRender.lib  RSYuvUtil.lib  WPNetCmd.lib
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
